feat: add GitHub integration and utility dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,13 @@ packaging
 pytest
 pytest-cov
 pytest-mock
-setuptools python-dotenv
+setuptools
 python-dotenv
+
+# GitHub integration
+requests
+PyGithub
+
+# Additional utilities
+python-dateutil
+gitpython
